--- a/FlowMAn/templates/base.html
+++ b/FlowMAn/templates/base.html
@@ -11,6 +11,7 @@
         <a href="{{ url_for('menu') }}">Menu</a>
         <a href="{{ url_for('answer_checker') }}">Answer Checker</a>
         <a href="{{ url_for('memory_bank') }}">Memory Bank</a>
+        <a href="{{ url_for('guesser_game') }}">Guesser Game</a>
     </nav>
     <div>
         {% with messages = get_flashed_messages() %}
